playground/notas_tests/invalid/syn-while-no-else-body.hulk
while (true) 1 else;
